# CVBuilder

./: .gitignore  README.md
.github/workflows/: test.yml
app/: globals.css
app/(auth)/login/: page.tsx
app/biosketch/new/: page.tsx
app/dashboard/: page.tsx
backend/: pyproject.toml
backend/accounts/: urls.py  views.py
backend/config/: settings.py  urls.py
backend/cv/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/cv/management/commands/: load_legacy_data.py  populate_publication_metadata.py
backend/cv/migrations/: 0001_initial.py  0002_add_user_to_models.py  0003_alter_award_options_alter_education_options_and_more.py  0004_personalstatement_biosketch.py
backend/cv/templates/: nih_biosketch.tex
backend/importers/: apps.py
cvbuilder-frontend/: package-lock.json
cvbuilder-frontend/app/: layout.tsx  page.tsx
cvbuilder-frontend/app/(auth)/login/: page.tsx
cvbuilder-frontend/app/dashboard/: page.tsx
cvbuilder-frontend/components/: biosketch-form.tsx  biosketch-generator.tsx  step-indicator.tsx
cvbuilder-frontend/components/dashboard/: awards-tab.tsx  biosketches-tab.tsx  education-tab.tsx  experience-tab.tsx  publications-tab.tsx
cvbuilder-frontend/components/sections/: experience-education-section.tsx  generate-biosketch-section.tsx  personal-statement-section.tsx  publications-section.tsx
cvbuilder-frontend/components/steps/: education-step.tsx  experience-step.tsx  personal-statement-step.tsx  publications-step.tsx  review-step.tsx
cvbuilder-frontend/lib/: api.ts  auth-context.tsx
(+2 files in other folders)
