[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Gregory Glasby",email = "gglasby@unc.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "markdown (>=3.9,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
